kubernetes/apps/networking/agentgateway/gateway/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp
spec:
  parentRefs:
    - name: mcp
      namespace: networking
      sectionName: https
  hostnames:
    - mcp.perryhuynh.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mcp
        - path:
            type: Exact
            value: /sse
      backendRefs:
        - name: mcp
          group: agentgateway.dev
          kind: AgentgatewayBackend
